--- a/MedIT_com/core_app/templates/core_app/index.html
+++ b/MedIT_com/core_app/templates/core_app/index.html
@@ -10,7 +10,7 @@
 <header>
     <nav>
         <ul>
-            <li><a href="{% url 'home' %}">home</a></li>
+            <li><a href="{% url 'index' %}">home</a></li>
             <li><a href="{% url 'login' %}">login</a></li>
             <li><a href="{% url 'register' %}">register</a></li>
         </ul>
@@ -18,6 +18,7 @@
 </header>
 <body>
     <main>
+        <h1>{{welcome}}</h1>
         {% block content %}
         {% endblock content %}
     </main>
