--- a/MedIT_com/core_app/templates/core_app/register.html
+++ b/MedIT_com/core_app/templates/core_app/register.html
@@ -1,7 +1,7 @@
 {% extends "core_app/index.html" %}
 
 {% block content %}
-    <form method="POST">
+    <form action='{% url "login" %}' method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Register">
