fixed registration bug

--- a/MedIT_com/users/templates/pages/landingpage.html
+++ b/MedIT_com/users/templates/pages/landingpage.html
@@ -1,7 +1,6 @@
-
 {% extends 'base.html' %}
 
 {% block content %}
 
-    <h1>Welcome to {{name}} 's profile</h1>
+    <h1>Welcome to MedIT.Com how can we help you today?</h1>
 {% endblock content %}
