--- a/MedIT_com/users/templates/users/logout.html
+++ b/MedIT_com/users/templates/users/logout.html
@@ -1,3 +1,8 @@
+
+
 {% block content %}
-    <p>Bye! Come by again anytime <a href="{% url 'login' %}">here</a></p>
+    <div class="container" style="width:50%; margin:auto">
+        <p>Bye! Come by again anytime <a href="{% url 'login' %}">here</a></p>
+    </div>
+    
 {% endblock content %}
