--- a/MedIT_com/users/templates/base.html
+++ b/MedIT_com/users/templates/base.html
@@ -1,17 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <title>MedIT.com</title>
 </head>
-<header class="container"> 
+<header> 
     <nav class="navbar navbar-light bg-light" >
         {% if user.is_authenticated %}
                 <span class="navbar-text">Welcome, {{user}}</span>
         {% endif %}
-        <ul>
+        <ul class="nav-container">
             <li><a href="{% url 'home' %}">home</a></li>
             <li><a href="{% url 'login' %}">login</a></li>
             <li><a href="{% url 'register' %}">register</a></li>
@@ -20,14 +22,20 @@
         </ul>
     </nav>
 </header>
-<body style="background-color:#FFEFD5;">
-    <main class="container">
+<body>
+    <main id="main-container"class="container">
             {% block content %}
             {% endblock content %}
     </main>
 
-    <footer class= "container">
-        <p> MedIT.Com project is an idea of Kai, Stylianos and Paola | Futureproof Weiland Cohort 2021</p>
+    <footer class="footer">
+        <p> MedIT.Com project is an idea of Kai Tse, Stylianos Thomas and Paola Maddaluno | Futureproof Weiland Cohort 2021</p>
     </footer>
 </body>
 </html>
+
+<!-- {% if messages %}
+        {% for message in messages %}
+            <section id="alert">{{ message }}</section>
+        {% endfor %}
+    {% endif %} -->
