--- a/MedIT_com/django_chatterbot/templates/app.html
+++ b/MedIT_com/django_chatterbot/templates/app.html
@@ -9,7 +9,7 @@
   <body>
 
     <!-- {% include 'nav.html' %} -->
-
+    {% csrf_token %}
     <div class="container">
 
       <div class="jumbotron mt-1">
