--- a/MedIT_com/users/templates/base.html
+++ b/MedIT_com/users/templates/base.html
@@ -5,21 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <title>MedIT.com</title>
 </head>
 <header> 
     <nav class="navbar navbar-light bg-light" >
         {% if user.is_authenticated %}
-                <span class="navbar-text">Welcome, {{user}}</span>
+            <span class="navbar-text">Welcome, {{user}}</span>
+            <ul class="nav-container">
+                <li><a href="{% url 'landingpage' %}"> Home </a></li>
+                <li><a href="{% url 'profile' %}"> Profile </a></li>
+                <li><a href="{% url 'logout' %}"> Logout </a></li>
+            </ul>
+        {% else %}
+            <ul class="nav-container">
+                <li><a href="{% url 'landingpage' %}"> Home </a></li>
+                <li><a href="{% url 'login' %}"> Login </a></li>
+                <li><a href="{% url 'register' %}"> Register </a></li>
+            </ul>
         {% endif %}
-        <ul class="nav-container">
-            <li><a href="{% url 'home' %}">home</a></li>
-            <li><a href="{% url 'login' %}">login</a></li>
-            <li><a href="{% url 'register' %}">register</a></li>
-            <li><a href="{% url 'logout' %}">logout</a></li>
-            <li><a href="{% url 'profile' %}">profile</a></li>
-        </ul>
     </nav>
 </header>
 <body>
@@ -27,15 +34,8 @@
             {% block content %}
             {% endblock content %}
     </main>
-
     <footer class="footer">
         <p> MedIT.Com project is an idea of Kai Tse, Stylianos Thomas and Paola Maddaluno | Futureproof Weiland Cohort 2021</p>
     </footer>
 </body>
 </html>
-
-<!-- {% if messages %}
-        {% for message in messages %}
-            <section id="alert">{{ message }}</section>
-        {% endfor %}
-    {% endif %} -->
