--- a/MedIT_com/django_chatterbot/templates/chat.html
+++ b/MedIT_com/django_chatterbot/templates/chat.html
@@ -1,6 +1,14 @@
+{% extends 'base.html' %}
 
-<form action="/api/chatbot" method="post">
+{% block chatbot %}
+<h2>Hi I am a chatbot, please enter your symptoms or diagnosis</h2>
+<br></br>
+<form action="" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
 </form>
+<p>
+    {{ message }}
+</p>
+{% endblock chatbot %}
