changes to css, html and chatterbot, managed to merge main and kai branch

--- a/MedIT_com/django_chatterbot/templates/chat.html
+++ b/MedIT_com/django_chatterbot/templates/chat.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block chatbot %}
-<h2>Hi I am a chatbot, please enter your symptoms or diagnosis</h2>
+<h2>Hi my name is MediBot, please enter your symptoms or diagnosis</h2>
 <br></br>
 <form action="" method="post">
     {% csrf_token %}
