adding style for concistency

--- a/MedIT_com/diagnosis/templates/diagnosis/diagnosis.html
+++ b/MedIT_com/diagnosis/templates/diagnosis/diagnosis.html
@@ -3,10 +3,10 @@
 {% block diagnosis %}
     <h2> This is the diagnosis page</h2>
     <h3> Please choose up to 5 symptoms:</h3>
-    <form action="" method="post">
+    <form action="" method="post" class="form-group">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value="Submit">
+        <input class="btn" type= "submit" value="Submit">
     </form>
     <p>
         {{ result }}
