--- a/MedIT_com/django_chatterbot/templates/chat.html
+++ b/MedIT_com/django_chatterbot/templates/chat.html
@@ -6,7 +6,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Submit">
+    <input class="btn"type="submit" value="Submit">
 </form>
 <p>
     {{ message }}
