--- a/MedIT_com/users/templates/users/login.html
+++ b/MedIT_com/users/templates/users/login.html
@@ -1,12 +1,12 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<form method="POST">
+<form method="POST" class="form-contol">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Login">
+    {{ form }}
+    <input class="btn" type="submit" value="Login">
 </form>
 
-<p>Not yet a member? Sign up <a href="{% url 'register' %}">here</a></p>
+<p>Not yet a member? Sign up <a class="btn" href="{% url 'register' %}">here</a></p>
 {% endblock content %}
 
