--- a/MedIT_com/users/templates/users/logout.html
+++ b/MedIT_com/users/templates/users/logout.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container" style="width:50%; margin:auto">
-        <p>Bye! Come by again anytime <a href="{% url 'login' %}">here</a></p>
+        <p>Bye! Come by again anytime <a  class="btn" href="{% url 'login' %}">here</a></p>
     </div>
     
 {% endblock content %}
