--- a/MedIT_com/users/templates/users/register.html
+++ b/MedIT_com/users/templates/users/register.html
@@ -3,7 +3,7 @@
 {% block content %}
     <form method="POST">
         {% csrf_token %} 
-        {{ form.as_p }} 
-        <input type="submit" value="Sign Up">
+        {{ form }}
+        <input class="btn" type="submit" value="Sign Up">
     </form>
 {% endblock content %}
